update for arm64

--- a/src/docker-server.html
+++ b/src/docker-server.html
@@ -424,7 +424,14 @@
                                             <br /><a href="https://hub.docker.com/r/emby/embyserver" target="_blank">https://hub.docker.com/r/emby/embyserver</a>
                                         </p>
                                         <div>
-                                            <strong>Install Emby Server - Armv7</strong>
+                                            <strong>Install Emby Server - Arm64 (aarch64)</strong>
+                                        </div>
+                                        <p>
+                                            Emby Docker instructions can be found on Docker Hub:
+                                            <br /><a href="https://hub.docker.com/r/emby/embyserver_arm64v8" target="_blank">https://hub.docker.com/r/emby/embyserver_arm64v8</a>
+                                        </p>
+                                        <div>
+                                            <strong>Install Emby Server - Armv7 (armhf)</strong>
                                         </div>
                                         <p>
                                             Emby Docker instructions can be found on Docker Hub:
