--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -494,6 +494,12 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">CentOS Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_aarch64.rpm">yum install {url}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">CentOS Armv7hl - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_armv7hl.rpm">yum install {url}</code></li>
@@ -518,6 +524,12 @@
                                             <div><b class="instructionListHeader">Fedora X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_x86_64.rpm">dnf install {url}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Fedora Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_aarch64.rpm">dnf install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
@@ -548,6 +560,12 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">OpenSUSE Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_aarch64.rpm">zypper install {url}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">OpenSUSE Armv7hl - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_armv7hl.rpm">zypper install {url}</code></li>
@@ -565,7 +583,7 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Ubuntu Armhf</b></div>
+                                            <div><b class="instructionListHeader">Ubuntu Armv7 (armhf)</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
@@ -579,7 +597,14 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Ubuntu Armhf - BETA</b></div>
+                                            <div><b class="instructionListHeader">Ubuntu Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_arm64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_arm64.deb">dpkg -i {filename}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Ubuntu Armv7 (armhf) - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
@@ -597,7 +622,7 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Debian Armhf</b></div>
+                                            <div><b class="instructionListHeader">Debian Armv7 (armhf)</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
@@ -611,7 +636,14 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Debian Armhf - BETA</b></div>
+                                            <div><b class="instructionListHeader">Debian Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_arm64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_arm64.deb">dpkg -i {filename}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Debian Armv7 (armhf) - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
@@ -629,7 +661,7 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Linux Mint Armhf</b></div>
+                                            <div><b class="instructionListHeader">Linux Mint Armv7 (armhf)</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
@@ -643,7 +675,14 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Linux Mint Armhf - BETA</b></div>
+                                            <div><b class="instructionListHeader">Linux Mint Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_arm64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_arm64.deb">dpkg -i {filename}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Linux Mint Armv7 (armhf) - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
