--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -488,6 +488,14 @@
                                                 <li>Start the server from the ASUSTOR web page</li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
+
+                                            <div><b class="instructionListHeader">Asustor Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-asustor_{version}_arm64.apk" href="emby-server-asustor_{version}_arm64.apk">{filename}</a></li>
+                                                <li>To copy the file to your Asustor, Open App Central -> Go to Manual Install -> Click Browse -> Select the package -> Click Upload.</li>
+                                                <li>Start the server from the ASUSTOR web page</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
                                         </div>
 
                                         <div class="installPlatform hide readynas">
@@ -548,16 +556,14 @@
 
                                             <div><b class="instructionListHeader">QNAP ARM X41, X31+, X31P, X28, X35 - BETA</b></div>
                                             <ol class="instructionList">
-                                                <li>Install QMono from <a href="https://www.qnapclub.eu/en/qpkg/193">QNAP Club</a>.</li>
-                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">{filename}</a></li>
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm-x41.qpkg" href="emby-server-qnap_{version}_arm-x41.qpkg">{filename}</a></li>
                                                 <li>Start Emby from the QNAP web interface</li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
                                             <div><b class="instructionListHeader">QNAP ARM X31- BETA</b></div>
                                             <ol class="instructionList">
-                                                <li>Install QMono from <a href="https://www.qnapclub.eu/en/qpkg/193">QNAP Club</a>.</li>
-                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x31.qpkg" href="emby-server-qnap-mono_{version}_arm-x31.qpkg">{filename}</a></li>
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm-x31.qpkg" href="emby-server-qnap_{version}_arm-x31.qpkg">{filename}</a></li>
                                                 <li>Start Emby from the QNAP web interface</li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
