--- a/src/premiere.html
+++ b/src/premiere.html
@@ -406,6 +406,7 @@
                         <h1>Emby Premiere</h1>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
                         <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  <span style="color:red">You must have your own server installed and your own media (or Live TV tuner).</span> Please only purchase one of the items below if you have your own Emby Server already installed.</p>
+                        <h2 style="font-weight: bold; color: red">Cyber Monday Sale!  Premiere Lifetime only $99</h2>
                     </div>
                 </div>
             </div>
@@ -522,7 +523,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $119/One-time<br>
+                                            <span style="text-decoration: line-through;">$119</span> <span style="color: red">$99</span>/One-time<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -531,13 +532,13 @@
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="11900" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="9900" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
                                                         <input name="feature" type="hidden" value="MBSupporter" />
                                                         <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="11900" />
+                                                        <input name="amount" type="hidden" value="9900" />
                                                     </form>
                                                 </div>
                                             </div>
@@ -907,19 +908,19 @@
                                         </div>
                                     </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Lifetime</h3></div> <!-- header --><div class="aio-icon-description" style="">
                                         <p>
-                                            $119/One-time<br>
+                                            <span style="text-decoration: line-through;">$119</span> <span style="color: red">$99</span>/One-time<br>
                                         </p><div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="11900" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="9900" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
                                                         <input name="feature" type="hidden" value="MBSupporter" />
                                                         <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="11900" />
+                                                        <input name="amount" type="hidden" value="9900" />
                                                     </form>
                                                 </div>
                                             </div>
