--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -479,7 +479,7 @@
 
                                     <h4>Want to help test and shape the future of Emby for Roku?</h4>
                                     <div style="margin-top:1em;">
-                                        Install the beta <a href="https://my.roku.com/add/EmbyBeta" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
+                                        Install the beta <a href="https://my.roku.com/account/add?channel=EmbyBeta" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
                                     </div>
 
                                 </div>
