--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -527,7 +527,7 @@
                                             <ol class="instructionList">
                                                 <li>Install the Emby plugin using the FreeNAS web interface</li>
                                                 <li>Start the server using the FreeNAS web interface</li>
-                                                <li>You may need to configure storage within your FreeNAS Jail in order to allow Emby to access it. See <a target="_blank" href="http://doc.freenas.org/9.3/freenas_jails.html#add-storage">Adding storage to FreeNAS.</a></li>
+                                                <li>You may need to configure storage within your FreeNAS Jail in order to allow Emby to access it. See <a target="_blank" href="https://www.ixsystems.com/documentation/freenas/11/jails.html#add-storage">Adding storage to FreeNAS.</a></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
                                         </div>
