--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -554,6 +554,13 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">QNAP Arm64 (aarch64) - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm_64.qpkg" href="emby-server-qnap_{version}_arm_64.qpkg">{filename}</a></li>
+                                                <li>Start Emby from the QNAP web interface</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">QNAP ARM X41, X31+, X31P, X28, X35 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm-x41.qpkg" href="emby-server-qnap_{version}_arm-x41.qpkg">{filename}</a></li>
