--- a/src/docker-server.html
+++ b/src/docker-server.html
@@ -4,8 +4,8 @@
 <head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>Emby Server for Windows</title>
-    <meta name="description" content="Emby Server for Windows - Organize and stream your personal videos, music, photos and Live TV to any device.">
+    <title>Emby Server for Docker</title>
+    <meta name="description" content="Emby Server for Docker - Organize and stream your personal videos, music, photos and Live TV to any device.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     {SOCIALNETWORKS}
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
