--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -482,6 +482,12 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">CentOS Arm64 (aarch64)</b></div>
+                                            <ol class="instructionList">
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="release" data-filename="emby-server-rpm_{version}_aarch64.rpm">yum install {url}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">CentOS Armv7hl</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_armv7hl.rpm">yum install {url}</code></li>
@@ -512,6 +518,12 @@
                                             <div><b class="instructionListHeader">Fedora X64</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">dnf install {url}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Fedora Arm64 (aarch64)</b></div>
+                                            <ol class="instructionList">
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="release" data-filename="emby-server-rpm_{version}_aarch64.rpm">dnf install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
@@ -548,6 +560,12 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">OpenSUSE Arm64 (aarch64)</b></div>
+                                            <ol class="instructionList">
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="release" data-filename="emby-server-rpm_{version}_aarch64.rpm">zypper install {url}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">OpenSUSE Armv7hl</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_armv7hl.rpm">zypper install {url}</code></li>
@@ -580,6 +598,13 @@
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Ubuntu Arm64 (aarch64)</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-deb_{version}_arm64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="release" data-filename="emby-server-deb_{version}_arm64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
@@ -622,6 +647,13 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">Debian Arm64 (aarch64)</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-deb_{version}_arm64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="release" data-filename="emby-server-deb_{version}_arm64.deb">dpkg -i {filename}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">Debian Armv7 (armhf)</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
@@ -658,6 +690,13 @@
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">Linux Mint Arm64 (aarch64)</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-deb_{version}_arm64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
+                                                <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="release" data-filename="emby-server-deb_{version}_arm64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
