--- a/src/emby-for-android-tv.html
+++ b/src/emby-for-android-tv.html
@@ -430,7 +430,7 @@
 
                                     <h2>What you want to watch – right up front</h2>
                                     <p>Designed with with typical usage in mind, you won’t have to go hunting through your library to find the content you are most likely wanting to watch right now. The home screen shows you the items you were watching but hadn’t finished, your latest un-watched movies, the next episode of all your current TV shows and what’s on Live TV right now.</p>
-                                    <p><img src="resources/5537f5f940bcb_firehome21.png"></p>
+                                    <p><img src="resources/atvnocards1.png"></p>
 
                                 </div>
                             </div>
@@ -460,32 +460,33 @@
 
                                     <h2 style="margin-top:1em;">Fast, easy browsing</h2>
                                     <p>For those times you do want to peruse your library, Emby for Android TV makes it a breeze. Providing several ways to traverse your content and rich search capability, you’ll find what you’re looking for in no time.</p>
-                                    <div id="gallery_408676" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid"> <div class="w-gallery-tnails" style="position: relative; height: 711px;"><a class="w-gallery-tnail order_1 animate_reveal" href="resources/atv1.png" title="atv1" style="position: absolute; left: 0px; top: 0px;"><img width="600" height="371" src="resources/atv1-600x371.png" class="w-gallery-tnail-img" alt="atv1"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_2 animate_reveal" href="resources/atv2.png" title="atv2" style="position: absolute; left: 572px; top: 0px;"><img width="600" height="372" src="resources/atv2-600x372.png" class="w-gallery-tnail-img" alt="atv2"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_3 animate_reveal" href="resources/atv3.png" title="atv3" style="position: absolute; left: 0px; top: 355px;"><img width="600" height="372" src="resources/atv3-600x372.png" class="w-gallery-tnail-img" alt="atv3"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_4 animate_reveal" href="resources/atv4.png" title="atv4" style="position: absolute; left: 572px; top: 356px;"><img width="600" height="371" src="resources/atv4-600x371.png" class="w-gallery-tnail-img" alt="atv4"><span class="w-gallery-tnail-title"></span></a></div> </div>
+                                    <div id="gallery_408676" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid"> <div class="w-gallery-tnails" style="position: relative; height: 711px;"><a class="w-gallery-tnail order_1 animate_reveal" href="resources/atvnewhome.png" title="atv1" style="position: absolute; left: 0px; top: 0px;"><img width="600" height="371" src="resources/atvnewhome-600x373.png" class="w-gallery-tnail-img" alt="atv1"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_2 animate_reveal" href="resources/atv2.png" title="atv2" style="position: absolute; left: 572px; top: 0px;"><img width="600" height="372" src="resources/atv2-600x363.png" class="w-gallery-tnail-img" alt="atv2"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_3 animate_reveal" href="resources/atv3.png" title="atv3" style="position: absolute; left: 0px; top: 355px;"><img width="600" height="372" src="resources/atv3-600x363.png" class="w-gallery-tnail-img" alt="atv3"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_4 animate_reveal" href="resources/atv4.png" title="atv4" style="position: absolute; left: 572px; top: 356px;"><img width="600" height="371" src="resources/atv4-600x363.png" class="w-gallery-tnail-img" alt="atv4"><span class="w-gallery-tnail-title"></span></a></div> </div>
 
                                     <h2 style="margin-top:1em;">Supports the Latest Android Features</h2>
                                     <p>Emby for Android TV can passthrough HD Audio to your receiver, including DTS-HD MA and TrueHD Atmos (compatible devices required). </p>
                                     <p>Emby for Android TV also supports 4K video, HDR, voice-activated search, gamepad control and more. </p>
+                                    <p><img src="resources/atvgoogle.png"></p>
                                     <h2 style="margin-top:1em;">Rediscover your content</h2>
                                     <p>Emby for Android TV also uses the power of the server to help you find movies to watch for the first time or over and over.</p>
                                     <p><img src="resources/5537f8e644beb_ftvsuggested.png"></p>
                                     <h2 style="margin-top:1em;">The Best Way to Watch Live TV</h2>
                                     <p>The Emby Live TV Guide helps you find what you're looking for quickly and easily.</p>
-                                    <p><img src="resources/atv9.png"></p>
+                                    <p><img src="resources/atvguide.png"></p>
                                     <h2 style="margin-top:1em;">Fast Channel Changing</h2>
                                     <p>In-video controls make for fast and easy channel changing.</p>
-                                    <p><img src="resources/atv10.png"></p>
+                                    <p><img src="resources/atvosguide.png"></p>
                                     <h2 style="margin-top:1em;">Never Miss a Show with Emby DVR</h2>
                                     <p>The Emby DVR allows you to quickly schedule and manage recordings using a simple and elegant interface.</p>
                                     <p><img src="resources/atv11.png"></p>
                                     <h2 style="margin-top:1em;">A Beautiful Way to Play Your Music</h2>
                                     <p>Easily play your favorite music albums, artists, genres, or instant mixes.</p>
-                                    <p><img src="resources/atv7.png"></p>
+                                    <p><img src="resources/atvlatestmusic.png"></p>
                                     <h2 style="margin-top:1em;">Easy Now Playing Queue</h2>
                                     <p>The app features a beautiful graphical interface that allows you to quickly move within your playlists.</p>
                                     <p><img src="resources/atv8.png"></p>
                                     <h2 style="margin-top:1em;">The next of a new generation</h2>
                                     <p>The new Emby for Android TV app is another in our new generation of more intelligent apps for all your devices. Designed more like the web client and fantastic Windows 8.1 and Win Phone apps, the Emby for Android TV app continues our commitment to make Emby the absolute best solution for your personal media collection.</p>
-                                    <p><img src="resources/atv6.png"></p>
+                                    <p><img src="resources/atvactor.png"></p>
 
                                 </div>
                             </div>
