--- a/src/download.html
+++ b/src/download.html
@@ -499,7 +499,7 @@
                                     <div class="w-portfolio-item order_5 emby-server" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="docker-server.html">
-                                                <div class="w-portfolio-item-image"><img width="500" height="500" src="resources/docker.png" class="w-portfolio-item-image-first wp-post-image" alt="server-freebsd">	</div>
+                                                <div class="w-portfolio-item-image"><img width="500" height="500" src="resources/docker.png" class="w-portfolio-item-image-first wp-post-image" alt="server-docker">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby Server for Docker</h2>
@@ -518,6 +518,21 @@
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby Server for FreeBSD</h2>
+                                                        <span class="w-portfolio-item-arrow"></span>
+                                                        <span class="w-portfolio-item-text"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <span class="ripple-container"></span>
+                                        </div>
+                                    </div>
+                                    <div class="w-portfolio-item order_2 tv-apps" style="opacity: 1;">
+                                        <div class="w-portfolio-item-h">
+                                            <a class="w-portfolio-item-anchor" href="server-android.html">
+                                                <div class="w-portfolio-item-image"><img width="371" height="371" src="resources/nvidiashield.png" class="w-portfolio-item-image-first wp-post-image" alt="firetv">	</div>
+                                                <div class="w-portfolio-item-meta">
+                                                    <div class="w-portfolio-item-meta-h">
+                                                        <h2 class="w-portfolio-item-title">Emby Server for NVIDIA Shield</h2>
                                                         <span class="w-portfolio-item-arrow"></span>
                                                         <span class="w-portfolio-item-text"></span>
                                                     </div>
