--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -286,7 +286,7 @@
     <script type="text/javascript" src="resources/ultimate-params.min.js"></script>
 
 
-    <link rel="prev" title="Emby for Windows 8.1" href="emby-for-windows-8-1.html">
+    <link rel="prev" title="Emby Theater" href="emby-theater.html">
     <link rel="next" title="Emby for Chromecast" href="emby-for-chromecast.html">
     <!--[if IE 8]><link rel="stylesheet" type="text/css" href="resources/vc-ie8.css" media="screen"><![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
@@ -415,7 +415,7 @@
                         <div class="w-pagehead-nav">
                             <div class="w-pagehead-nav-h">
                                 <a class="w-pagehead-nav-item type_prev" href="emby-for-chromecast.html" title="Emby for Chromecast"><i class="mdfi_navigation_chevron_left"></i></a>
-                                <a class="w-pagehead-nav-item type_next" href="emby-for-windows-8-1.html" title="Emby for Windows 8.1"><i class="mdfi_navigation_chevron_right"></i></a>
+                                <a class="w-pagehead-nav-item type_next" href="emby-theater.html" title="Emby Theater"><i class="mdfi_navigation_chevron_right"></i></a>
                             </div>
                         </div>
                     </div>
