--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -6,10 +6,6 @@
     <meta charset="UTF-8">
     <title>Emby Server for FreeBSD - Emby</title>
     <meta name="description" content="Emby Server for FreeBSD - Organize and stream your personal videos, music, photos and Live TV to any device.">
-    <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Emby">
-    <meta itemprop="description" content="media server for personal streaming videos tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
-    <meta itemprop="image" content="https://emby.media/resources/logowhite_1881.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="https://emby.media/resources/logowhite_1881.png">
@@ -463,7 +459,7 @@
                                 </div>
 
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi libraw</code></div>
+                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi libraw ImageMagick6</code></div>
                                 <br />
                                 <div><b>Install Emby Server on FreeBSD 11.2:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd11_{version}_amd64.txz">pkg add -f {url}</code></div>
