--- a/src/support.html
+++ b/src/support.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Support - Emby</title>
-    <meta name="description" content="Emby Support, Wiki and Social Media, Twitter, Facebook, Google+, Github, and more.">
+    <meta name="description" content="Emby Support, Wiki and Social Media, Twitter, Facebook, Github, and more.">
     {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
@@ -477,25 +477,6 @@
                                                 </div>
                                             </div>
                                         </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Github</h3></div> <!-- header --><div class="aio-icon-description" style="">Fork us on Github!</div> <!-- description -->
-                                    </div> <!-- aio-icon-box -->
-                                </a>
-                            </div> <!-- aio-icon-component -->
-                        </div>
-                        <div class="one-quarter">
-                            <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="https://plus.google.com/u/0/104622186938779417813/posts" target=" _blank">
-                                    <div class="aio-icon-box top-icon" style="">
-                                        <div class="aio-icon-top">
-                                            <div class="ult-just-icon-wrapper ">
-                                                <div class="aio-icon circle  animated fadeIn delay-03" data-animation="fadeIn" data-animation-delay="03" style="color: #333333; background: #ffffff; font-size: 100px; display: inline-block;">
-                                                    <i class="Defaults-google-plus-square"></i>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="aio-icon-header">
-                                            <h3 class="aio-icon-title" style="">Google Plus</h3>
-                                        </div> <!-- header -->
-                                        <div class="aio-icon-description" style="">Follow us on Google Plus&nbsp;to keep up with the latest Emby news.</div> <!-- description -->
                                     </div> <!-- aio-icon-box -->
                                 </a>
                             </div> <!-- aio-icon-component -->
