--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -440,7 +440,15 @@
                                             <strong>Complete the Emby Server Setup Wizard</strong><br>
                                             Open your web browser and visit http://localhost:8096
                                         </p>
-                                        <div style="margin-top:2em;color:gray;">Note: Installing into MacOS Applications is necessary due to Apple Gatekeeper path randomization, which allows the app to run in a confined environment.</div>
+                                        <div style="margin:2em 0;color:gray;">Note: Installing into MacOS Applications is necessary due to Apple Gatekeeper path randomization, which allows the app to run in a confined environment.</div>
+
+                                        <p>
+                                            <strong>Download (Beta)</strong><br>
+                                            Download <a class="lnkPackageDownload" data-level="beta" data-filename="embyserver-osx-x64-{version}.zip" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-osx-x64-3.2.50.0.zip" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">Emby Server for MacOS</a>.
+                                        </p>
+                                        <p>
+                                            Beta installation instructions are the same as above.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
