--- a/src/server-android.html
+++ b/src/server-android.html
@@ -428,6 +428,16 @@
                                         <p>
                                             NVidia Shield and other Android devices running Android 6.0+.
                                         </p>
+                                        <h2>Installation (Beta)</h2>
+                                        <div>
+                                            <strong>Download and Install APK</strong>
+                                        </div>
+                                        <p>
+                                            <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="com.emby.embyserver_{version}.apk" href="https://github.com/MediaBrowser/Emby/releases/download/4.0.1.0/com.emby.embyserver_4.0.1.0.apk">{filename}</a>
+                                        </p>
+                                        <p>
+                                            Beta installation instructions are the same as above.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
